--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-My GitHub Page
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+	<head profile='http://www.w3.org/2006/03/hcard'>
+		<title>iConstellation</title>
+	</head>
+	
+	<body>
+		<h1>iConstellation</h1>
+	</body>
+</html>
